# quantshift

./: .env.email  .env.example  .env.test  .gitignore  .gitmodules  ADMIN_PLATFORM_PROPOSAL.md  ARCHITECTURE.md  BOT_ENHANCEMENT_ROADMAP.md  BOT_INTEGRATION_GUIDE.md  BUMP-WORKFLOW-COMPATIBILITY-ANALYSIS.md  CHANGELOG.md  CLEANUP-AUDIT-2026-01-25.md  CLEANUP-COMPLETE-2026-01-25.md  CRYPTO-BOT-SETUP.md  DECISIONS.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_ROADMAP.md  NEXTJS_SETUP.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE6_PROGRESS.md  PHASE_2_UI_ENHANCEMENT_PLAN.md  PLAN.md  PLATFORM_BUILD_STATUS.md  PLATFORM_GUIDE.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PROMOTE-TO-CONTROL-PLANE.md  QUANTSHIFT-RELEASE-SYSTEM.md  README.md  RELEASE-NOTES-STANDARDIZATION-REVISED.md  RELEASE_NOTES_SYSTEM.md  RESTRUCTURE-PLAN.md  ROADMAP.md  ROADMAP_MANAGEMENT.md  TASK-STATE.md  TEST-RESULTS-HOSTNAME-CHANGES.md  TEST-RESULTS-PHASE-1.5.md  TESTING_AUTH.md  backtest_ma_crossover.py  convert_admin_dark_theme.sh  (+12 more)
apps/bots/crypto/: README.md  backtest_crypto.py  pyproject.toml  run_crypto_v2.py
apps/bots/crypto/src/quantshift_crypto/: __init__.py  bot.py  database_writer.py  main.py  strategy.py
apps/bots/equity/: ADMIN_PLATFORM_INTEGRATION.md  README.md  alpaca_executor.py  database_writer.py  email_integration.py  pyproject.toml  requirements.txt  run_bot.py  run_bot_v2.py  train_ml_regime_classifier.py  train_rl_agent.py
apps/bots/equity/alpaca_trading/: __init__.py  data.py  filters.py  logging.py  models.py  report.py  settings.py
apps/bots/equity/alpaca_trading/alerts/: __init__.py  crypto_alerts.py
apps/bots/equity/alpaca_trading/challenges/: __init__.py  autonomous_trader.py  million_dollar_challenge.py  million_dollar_trader.py  small_account_challenge.py
apps/bots/equity/alpaca_trading/core/: config.py  exceptions.py  notifier.py  strategy.py
apps/bots/equity/alpaca_trading/crypto/: __init__.py  crypto_config.py  crypto_strategy.py  crypto_trader.py
apps/bots/equity/alpaca_trading/gui/: __init__.py  app.py  challenge_dashboard.py  coinbase_dashboard.py  coinbase_dashboard_old.py  crypto_dashboard.py  stock_universe.py  strategy_config.py  system_logs.py  trading_dashboard.py
apps/bots/equity/alpaca_trading/indicators/: __init__.py  advanced_indicators.py
apps/bots/equity/alpaca_trading/screeners/: __init__.py  momentum_screener.py
apps/bots/equity/backtest/: run_backtest.py  strategy_bollinger_bands.py  strategy_breakout_momentum.py  strategy_rsi_mean_reversion.py
apps/bots/equity/tests/: __init__.py  test_bot.py
(+505 files in other folders)
