[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantshift"
version = "0.1.0"
description = "QuantShift Trading System - Monorepo"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "heybearc", email = "heybearc@users.noreply.github.com"}
]

[tool.setuptools.packages.find]
where = ["packages", "apps/bots"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["packages", "apps/bots"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
